Fix distortion on background image

--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,9 @@ button {
 img {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: auto;
   /* margin: 0px; */
-}I
+}
 
 main {
   /* margin: 0px; */
